--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -29,13 +29,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-    
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_core: ^2.8.0
+  firebase_core: ^2.17.0
   firebase_auth: ^4.3.0
   firebase_core_platform_interface: ^4.5.3
   email_validator: ^2.1.17
@@ -73,7 +71,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -86,6 +83,8 @@ flutter:
     - assets/images/post.jpeg
     - assets/images/logo.jpg
     - assets/images/post2.jpeg
+    - assets/images/login.jpg
+    - assets/images/login2.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -102,8 +101,8 @@ flutter:
     - family: Lato
       fonts:
         - asset: assets/fonts/Lato-Regular.ttf
-  #       - asset: fonts/Anton-Regular.ttf
-  #         style: italic
+    #       - asset: fonts/Anton-Regular.ttf
+    #         style: italic
     - family: Anton
       fonts:
         - asset: assets/fonts/Anton-Regular.ttf
