--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   file_picker: ^5.2.1
   rxdart: ^0.27.7
   curved_labeled_navigation_bar: ^2.0.2
+  timeline_tile: ^2.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
