--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,13 +50,14 @@ dependencies:
   shared_preferences: ^2.1.1
   syncfusion_flutter_pdf: ^21.2.4
   pdf: ^3.6.0
-  url_launcher: ^6.1.5
+  url_launcher: ^6.1.13
   open_file: ^3.0.1
   flutter_pdfview: ^1.2.5
   file_picker: ^5.2.1
   rxdart: ^0.27.7
   curved_labeled_navigation_bar: ^2.0.2
   timeline_tile: ^2.0.0
+  email_launcher: ^1.1.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
