adding deadline and time stamp

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -98,6 +98,8 @@ flutter:
     - assets/images/noData2.jpg
     - assets/images/noNotification.jpg
     - assets/images/empty.png
+    - assets/images/images (1).jpeg
+    - assets/images/images.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
